[gd_scene load_steps=5 format=2]

[ext_resource path="res://project/Ghost/scare_pip.tscn" type="PackedScene" id=1]
[ext_resource path="res://project/Ghost/on_ghost_ui.gd" type="Script" id=2]
[ext_resource path="res://project/Ghost/star_row.tscn" type="PackedScene" id=3]
[ext_resource path="res://project/Ghost/star_container.gd" type="Script" id=4]

[node name="OnGhostUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -75.0
margin_right = -1870.0
margin_bottom = -1005.0
rect_pivot_offset = Vector2( 50, 75 )
script = ExtResource( 2 )

[node name="TopZone" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 0.3

[node name="ColorRect" type="ColorRect" parent="TopZone"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BottomZone" type="Control" parent="."]
anchor_top = 0.7
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="BottomZone"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="StarContainer" type="Control" parent="BottomZone"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="BottomZone/StarContainer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopStarRow" parent="BottomZone/StarContainer/VBoxContainer" instance=ExtResource( 3 )]

[node name="BottomStarRow" parent="BottomZone/StarContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 34.0
margin_bottom = 64.0

[node name="PipContainer" type="Control" parent="BottomZone"]
margin_right = 40.0
margin_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PIP" parent="HBoxContainer" instance=ExtResource( 1 )]
margin_right = 30.0
margin_bottom = 150.0
rect_min_size = Vector2( 20, 0 )

[node name="PIP2" parent="HBoxContainer" instance=ExtResource( 1 )]
margin_left = 34.0
margin_right = 65.0
margin_bottom = 150.0
rect_min_size = Vector2( 20, 0 )

[node name="PIP3" parent="HBoxContainer" instance=ExtResource( 1 )]
margin_left = 69.0
margin_right = 100.0
margin_bottom = 150.0
rect_min_size = Vector2( 20, 0 )
